# scampi_ks_mars_fusion

./: .gitmodules  LICENSE  README.md
ros/: README.md  mars_ks_fusion.launch  send_init_cable_length.py  set_pose_source.py
ros/equilibrium_detector/: CMakeLists.txt  package.xml
ros/equilibrium_detector/configs/: detector_params.yaml
ros/equilibrium_detector/launch/: equilibrium_detector_node.launch
ros/equilibrium_detector/nodes/: equilibrium_detector_node.py  utils.py
ros/pose_wrapper_scampi/: mars_pose.launch  mars_wrapper_pose.cpp  mars_wrapper_pose.h  pose_config.yaml
ros/scampi_ks_ros/: CMakeLists.txt  package.xml
ros/scampi_ks_ros/configs/: robot_params.yaml
ros/scampi_ks_ros/launch/: solver_start_prop.launch
ros/scampi_ks_ros/nodes/: Untitled.ipynb  scampi_ks_node.py  utils.py
ros/scampi_ks_ros/srv/: CableLenInit.srv  SetPoseSource.srv
ros/spc_ads_pub/: CMakeLists.txt  package.xml
ros/spc_ads_pub/msg/: CableLength.msg
ros/tools/: Time_Latency_Issue.ipynb  bag_to_csv.py  time_frame_alignment.ipynb
rviz_config/: scampi_default.rviz
solver/: CMakeLists.txt  PYTHON.md  setup.py
solver/closed_source_package/: CMakeLists.txt  scampi_ks_solver-0.0.1-cp36-cp36m-linux_x86_64.whl
solver/closed_source_package/cpp_app_example/: CMakeLists.txt
solver/closed_source_package/cpp_app_example/lib/include/: libscampi_ks_data_types.h  libscampi_ks_solvers.h
solver/cmake/: cotire.cmake
solver/lib/include/: libscampi_ks_costs.h  libscampi_ks_solvers.h  libscampi_ks_utils.h
solver/lib/src/: libscampi_ks_solvers.cpp
solver/notebooks/: example-sim-data.ipynb
solver/notebooks/.ipynb_checkpoints/: example-real-data-checkpoint.ipynb
solver/notebooks/Results/real_data/: timing.csv
solver/notebooks/matlab_data/real/: input_data.mat  robot_params.mat
solver/notebooks/matlab_data/simulation/: centers.mat
solver/src/: main.cpp
solver/tests/: cost_funcs_tests.cpp  solver_funcs_tests.cpp  test_basic.py  utils_funcs_tests.cpp
